--- a/crates/sui-rosetta/Cargo.toml
+++ b/crates/sui-rosetta/Cargo.toml
@@ -7,7 +7,8 @@ publish = false
 edition = "2021"
 
 [dependencies]
-axum = "0.5.16"
+axum = "0.6.1"
+axum-extra = "0.4.2"
 anyhow = { version = "1.0.64", features = ["backtrace"] }
 tracing = "0.1.36"
 serde = "1.0.143"
