--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -85,6 +85,7 @@
         "eslint-config-prettier": "^8.6.0",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-header": "^3.1.1",
+        "node-fetch": "v2",
         "onchange": "^7.1.0",
         "postcss": "^8.4.19",
         "prettier": "2.8.1",
